--- a/trash.css
+++ b/trash.css
@@ -218,6 +218,7 @@ button,
 [type='reset'],
 [type='submit'] {
   -webkit-appearance: button;
+  appearance: button;
   /* 1 */
   background-color: transparent;
   /* 2 */
@@ -265,6 +266,7 @@ Correct the cursor style of increment and decrement buttons in Safari.
 
 [type='search'] {
   -webkit-appearance: textfield;
+  appearance: textfield;
   /* 1 */
   outline-offset: -2px;
   /* 2 */
@@ -276,6 +278,7 @@ Remove the inner padding in Chrome and Safari on macOS.
 
 ::-webkit-search-decoration {
   -webkit-appearance: none;
+  appearance:none;
 }
 
 /*
@@ -285,6 +288,7 @@ Remove the inner padding in Chrome and Safari on macOS.
 
 ::-webkit-file-upload-button {
   -webkit-appearance: button;
+  appearance:button;
   /* 1 */
   font: inherit;
   /* 2 */
@@ -396,7 +400,6 @@ embed,
 object {
   display: block;
   /* 1 */
-  vertical-align: middle;
   /* 2 */
 }
 
@@ -595,29 +598,25 @@ video {
   position: relative;
 }
 
-.z-40 {
-  z-index: 40;
-}
-
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
-}
-
-.mt-16 {
-  margin-top: 4rem;
 }
 
 .flex {
   display: flex;
 }
 
-.grid {
-  display: grid;
+.hidden {
+  display: none;
 }
 
 .w-full {
   width: 100%;
+}
+
+.max-w-md {
+  max-width: 28rem;
 }
 
 .shrink {
@@ -626,6 +625,14 @@ video {
 
 .grid-cols-3 {
   grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
+.flex-row {
+  flex-direction: row;
+}
+
+.flex-col {
+  flex-direction: column;
 }
 
 .flex-wrap {
@@ -648,12 +655,16 @@ video {
   justify-content: center;
 }
 
-.justify-evenly {
-  justify-content: space-evenly;
+.justify-between {
+  justify-content: space-between;
 }
 
-.gap-6 {
-  gap: 1.5rem;
+.justify-around {
+  justify-content: space-around;
+}
+
+.gap-4 {
+  gap: 1rem;
 }
 
 .space-x-4 > :not([hidden]) ~ :not([hidden]) {
@@ -662,53 +673,35 @@ video {
   margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
-.space-x-16 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(4rem * var(--tw-space-x-reverse));
-  margin-left: calc(4rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
 .-space-x-4 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(-1rem * var(--tw-space-x-reverse));
   margin-left: calc(-1rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
-.bg-body {
+.space-x-16 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(4rem * var(--tw-space-x-reverse));
+  margin-left: calc(4rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.bg-pink {
   --tw-bg-opacity: 1;
-  background-color: rgb(41 66 131 / var(--tw-bg-opacity));
+  background-color: rgb(178 107 159 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-r {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
 
-.from-yellow {
-  --tw-gradient-from: #DEBD69;
-  --tw-gradient-to: rgb(222 189 105 / 0);
+.from-cyan-500 {
+  --tw-gradient-from: #06b6d4;
+  --tw-gradient-to: rgb(6 182 212 / 0);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.via-pink {
-  --tw-gradient-to: rgb(222 84 153 / 0);
-  --tw-gradient-stops: var(--tw-gradient-from), #de5499, var(--tw-gradient-to);
-}
-
-.via-green {
-  --tw-gradient-to: rgb(93 188 112 / 0);
-  --tw-gradient-stops: var(--tw-gradient-from), #5dbc70, var(--tw-gradient-to);
-}
-
-.to-yellow {
-  --tw-gradient-to: #DEBD69;
-}
-
-.to-pink {
-  --tw-gradient-to: #de5499;
-}
-
-.p-6 {
-  padding: 1.5rem;
+.to-blue-500 {
+  --tw-gradient-to: #3b82f6;
 }
 
 .py-12 {
@@ -733,17 +726,20 @@ video {
   padding-bottom: 3rem;
 }
 
+.pl-10 {
+  padding-left: 2.5rem;
+}
+
+.pl-16 {
+  padding-left: 4rem;
+}
+
 .pl-8 {
   padding-left: 2rem;
 }
 
 .font-folklore {
   font-family: IM FELL DW Pica, sans-serif;
-}
-
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
 }
 
 .text-5xl {
@@ -756,6 +752,11 @@ video {
   line-height: 1;
 }
 
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
@@ -765,24 +766,19 @@ video {
   font-style: italic;
 }
 
-.text-blue {
+.text-green {
   --tw-text-opacity: 1;
-  color: rgb(169 224 255 / var(--tw-text-opacity));
+  color: rgb(163 200 171 / var(--tw-text-opacity));
 }
 
-.text-yellow {
+.text-pink {
   --tw-text-opacity: 1;
-  color: rgb(222 189 105 / var(--tw-text-opacity));
+  color: rgb(178 107 159 / var(--tw-text-opacity));
 }
 
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-green {
-  --tw-text-opacity: 1;
-  color: rgb(93 188 112 / var(--tw-text-opacity));
 }
 
 .drop-shadow-lg {
@@ -799,6 +795,11 @@ html {
     justify-content: center;
   }
 
+  .sm\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
   .sm\:text-3xl {
     font-size: 1.875rem;
     line-height: 2.25rem;
@@ -806,23 +807,17 @@ html {
 }
 
 @media (min-width: 768px) {
-  .md\:justify-start {
-    justify-content: flex-start;
-  }
-
-  .md\:text-6xl {
-    font-size: 3.75rem;
-    line-height: 1;
+  .md\:flex {
+    display: flex;
   }
 
   .md\:text-9xl {
     font-size: 8rem;
     line-height: 1;
   }
-}
 
-@media (min-width: 1024px) {
-  .lg\:justify-between {
-    justify-content: space-between;
+  .md\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
   }
 }
