--- a/tailwind.css
+++ b/tailwind.css
@@ -785,6 +785,10 @@ video {
   font-size: 1.875rem;
   line-height: 2.25rem;
 }
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
+}
 
 .text-6xl {
   font-size: 3.75rem;
