--- a/tailwind.css
+++ b/tailwind.css
@@ -781,6 +781,11 @@ video {
   font-family: IM FELL DW Pica, sans-serif;
 }
 
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2.25rem;
+}
+
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
