--- a/tailwind.css
+++ b/tailwind.css
@@ -630,22 +630,21 @@ video {
   flex-shrink: 1;
 }
 
-.scale-50 {
-  --tw-scale-x: .5;
-  --tw-scale-y: .5;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+@-webkit-keyframes pulse {
+  50% {
+    opacity: .5;
+  }
 }
 
-.scale-75 {
-  --tw-scale-x: .75;
-  --tw-scale-y: .75;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+@keyframes pulse {
+  50% {
+    opacity: .5;
+  }
 }
 
-.scale-100 {
-  --tw-scale-x: 1;
-  --tw-scale-y: 1;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+.animate-pulse {
+  -webkit-animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+          animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
 }
 
 .grid-cols-1 {
@@ -696,26 +695,27 @@ video {
 
 .bg-body {
   --tw-bg-opacity: 1;
-  background-color: rgb(41 66 131 / var(--tw-bg-opacity));
+  background-color: rgb(80 55 44 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-r {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
 
-.from-yellow {
-  --tw-gradient-from: #DEBD69;
-  --tw-gradient-to: rgb(222 189 105 / 0);
+.from-purple-300 {
+  --tw-gradient-from: #d8b4fe;
+  --tw-gradient-to: rgb(216 180 254 / 0);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.via-pink {
-  --tw-gradient-to: rgb(222 84 153 / 0);
-  --tw-gradient-stops: var(--tw-gradient-from), #de5499, var(--tw-gradient-to);
+.from-white {
+  --tw-gradient-from: #fff;
+  --tw-gradient-to: rgb(255 255 255 / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.to-yellow {
-  --tw-gradient-to: #DEBD69;
+.to-blue {
+  --tw-gradient-to: #A9E0FF;
 }
 
 .p-6 {
@@ -732,11 +732,6 @@ video {
   padding-right: 2.5rem;
 }
 
-.px-0 {
-  padding-left: 0px;
-  padding-right: 0px;
-}
-
 .pt-20 {
   padding-top: 5rem;
 }
@@ -749,28 +744,8 @@ video {
   padding-bottom: 3rem;
 }
 
-.pl-32 {
-  padding-left: 8rem;
-}
-
 .pb-8 {
   padding-bottom: 2rem;
-}
-
-.pl-0 {
-  padding-left: 0px;
-}
-
-.pl-8 {
-  padding-left: 2rem;
-}
-
-.pl-10 {
-  padding-left: 2.5rem;
-}
-
-.pl-12 {
-  padding-left: 3rem;
 }
 
 .text-center {
@@ -783,20 +758,21 @@ video {
 
 .text-2xl {
   font-size: 1.5rem;
-  line-height: 2.25rem;
+  line-height: 2rem;
+}
+
+.text-6xl {
+  font-size: 3.75rem;
+  line-height: 1;
 }
 
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
 }
+
 .text-5xl {
   font-size: 3rem;
-  line-height: 1;
-}
-
-.text-6xl {
-  font-size: 3.75rem;
   line-height: 1;
 }
 
@@ -814,19 +790,29 @@ video {
   color: rgb(169 224 255 / var(--tw-text-opacity));
 }
 
-.text-yellow {
+.text-purple-300 {
   --tw-text-opacity: 1;
-  color: rgb(222 189 105 / var(--tw-text-opacity));
-}
-
-.text-pink {
-  --tw-text-opacity: 1;
-  color: rgb(222 84 153 / var(--tw-text-opacity));
+  color: rgb(216 180 254 / var(--tw-text-opacity));
 }
 
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-dark-blue {
+  --tw-text-opacity: 1;
+  color: rgb(61 99 191 / var(--tw-text-opacity));
+}
+
+.text-dark-pink {
+  --tw-text-opacity: 1;
+  color: rgb(236 136 176 / var(--tw-text-opacity));
+}
+
+.text-body {
+  --tw-text-opacity: 1;
+  color: rgb(80 55 44 / var(--tw-text-opacity));
 }
 
 .drop-shadow-lg {
@@ -838,17 +824,12 @@ html {
   scroll-behavior: smooth;
 }
 
-@media (min-width: 414px) {
-  .xs\:pl-10 {
-    padding-left: 2.5rem;
-  }
+.hover\:text-white:hover {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 @media (min-width: 640px) {
-  .sm\:justify-center {
-    justify-content: center;
-  }
-
   .sm\:px-0 {
     padding-left: 0px;
     padding-right: 0px;
@@ -890,10 +871,6 @@ html {
 
   .md\:pb-0 {
     padding-bottom: 0px;
-  }
-
-  .md\:text-right {
-    text-align: right;
   }
 
   .md\:text-5xl {
